# music

./: .gitignore  todo
hub/: Cargo.toml  build.rs  hub
hub/src/: main.rs
protos/: hub.proto  player.proto
web_player_app/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
web_player_app/scripts/: build.sh  clean.sh  generate.sh
web_player_app/src/: audio.ts  audio_emitter.ts  dom.ts  events.ts  main.ts  math.ts  optional.ts  player.ts  result.ts  scheduler.ts  slider.ts  tape.ts  time.ts
web_player_frontend/: .prettierignore  Cargo.toml  build.rs  package-lock.json  package.json  pnpm-lock.yaml
web_player_frontend/assets/: main.css  web-player.js  web-player.js.map
web_player_frontend/src/: main.rs
web_player_frontend/templates/: base.html  home.html  player.html  player_state.html
