[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.11.0" }
tonic-web = { version = "0.11.0" }
prost = { version = "0.12" }
tower-http = { version = "0.4.0", features = ["cors"] }
http = "1.1.0"
r2d2 = "0.8.10"
sqlite = "0.36.0"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
